<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/app_title"
    android:layout_gravity="center"
    android:textStyle="bold"
    android:textSize="25sp"
   />
    <RadioGroup
        android:layout_marginTop="20sp"
        android:layout_width="200sp"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rad5Star"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/app_rad5Star" />
        <RadioButton
            android:id="@+id/rad4Star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_rad4Star" />
        <RadioButton
            android:id="@+id/rad3Star"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/app_rad3Star" />
        <RadioButton
            android:id="@+id/rad2Star"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/app_rad2Star" />
        <RadioButton
            android:id="@+id/rad1Star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_rad1Star" />
    </RadioGroup>
    <Button
        android:id="@+id/btnBinhChon"
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_btnBinhChon"
        android:textSize="20sp"
        android:background="@color/colorPrimary"
        android:layout_gravity="center"/>

</LinearLayout>